--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,19 +27,21 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<!-- spring data jpa -->
-	<!-- <filter>
-		<filter-name>oemInViewFilter</filter-name>
-		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
-		<init-param>
-			<param-name>entityManagerFactoryBeanName</param-name>
-			<param-value>emf</param-value>
-		</init-param>
-	</filter>
+	<!-- <filter> <filter-name>oemInViewFilter</filter-name> <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class> 
+		<init-param> <param-name>entityManagerFactoryBeanName</param-name> <param-value>emf</param-value> 
+		</init-param> </filter> <filter-mapping> <filter-name>oemInViewFilter</filter-name> 
+		<url-pattern>/*</url-pattern> </filter-mapping> -->
 	
+	<!-- spring security filter -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
 	<filter-mapping>
-		<filter-name>oemInViewFilter</filter-name>
+		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	</filter-mapping>
 </web-app>
