--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
 		<init-param> <param-name>entityManagerFactoryBeanName</param-name> <param-value>emf</param-value> 
 		</init-param> </filter> <filter-mapping> <filter-name>oemInViewFilter</filter-name> 
 		<url-pattern>/*</url-pattern> </filter-mapping> -->
-	
+
 	<!-- spring security filter -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
@@ -42,6 +42,24 @@
 
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<!-- encode UTF-8 for special characters -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 </web-app>
